--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,4 +13,8 @@
         android:icon="@drawable/ic_log_out"
         android:title="@string/action_logout"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/action_info"
+        android:title="Info"
+        app:showAsAction="never" />
 </menu>
