--- a/app/src/main/res/layout/fragment_quiz_suggestions.xml
+++ b/app/src/main/res/layout/fragment_quiz_suggestions.xml
@@ -1,8 +1,18 @@
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/recycler_view_suggestions"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.trydevs.askyourfriends.askurfrnds.fragments.FragmentQuizSuggestions">
 
-</android.support.v7.widget.RecyclerView>
+    <TextView
+        android:id="@+id/textView_info"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/no_suggestions" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_suggestions"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</FrameLayout>
